--- a/html/all.html
+++ b/html/all.html
@@ -14,7 +14,7 @@
 <body>
 
 <header>
-<div id="logo" class="header"> <img src="../img/life.png" alt="" height="50"> </div>
+<div id="logo" class="header"> <img src="../img/Life.png" alt="" height="50"> </div>
 
 <div id="home" class="header"> <img src="../img/home.png" alt="" height="30"></div>
 <div class="header">
